<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros_sec_test</name>
  <version>0.0.1</version>
  <description>Package for executing attacks against a ROS systems</description>
  <maintainer email="ros-contributions@amazon.com">AWS RoboMaker</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>class_loader</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lifecycle_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>rclcpp_lifecycle</build_depend>
  <build_depend>rcutils</build_depend>

  <exec_depend>class_loader</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_lifecycle</exec_depend>
  <exec_depend>rcutils</exec_depend>
  <exec_depend>ros2run</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
